# lhjy

./: .env.example  .gitignore  .hermes.md  AGENTS.md  CLAUDE.md  HANDOFF.md  QMT_接口使用说明_20260412.md  README.md  SOUL.md  pyproject.toml  task.md  task_expert_review_remediation_20260420.md  task_hermes_console_and_robot_upgrade_20260421.md  task_live_fix_20260420.md  task_strategic_evolution_20260420.md  walkthrough.md  windows_gateway_market_api_response_20260412.md
discuss/: codex-quant-full-v1-unattended.txt  codex-quant-task-queue.txt  discussion-linear-scoring-limitations.md  discussion-quant-system-design.md  quant-full-v1-complete.md  quant-full-v1-execution-taskboard.md  quant-full-v1-task-breakdown.md  quant-strategy-plan-codex-v2.md  quant-strategy-plan-supplement-v1.md  quant-strategy-plan-v1.md  v2-agent-architecture.md  v2-algorithm-audit.md  v2-architecture.md  v2-requirements.md  执行记录-codex.md
docs/: XTQ_Windows_Go_技术实现说明_20260416.md  XTQ_Windows_Go_接口说明_20260416.md  agent-data-usage.md  agent_autonomy_factor_library_plan_20260417.md  agent_centric_refactor_plan_20260415.md  agent_robot_mainline_workflow.md  agent_skill_pack_reference_20260416.md  algorithm-specs.md  claude-code-wsl-stability-plan.md  codex-unattended.md  codex_auto_workflow_20260417.md  controlled_apply_pressure_test_plan_20260414.md  data-architecture.md  data_storage_architecture_plan_20260421.md  data_storage_architecture_review_20260421.md  design-goals.md  expert_review_20260419.md  expert_review_packet_20260420.md  feishu_event_subscription_setup.md  feishu_long_connection_setup.md  (+45 more)
(+443 files in other folders)
